Reimplemented refund statistics generation to work with new simpler concepts.